SignUpLogic Implemented & Corrected